<resources>
    <string name="app_name">Group Activity Tracker</string>
    <string name="history">History</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="activity">Activity</string>
    <string name="login">Login</string>
    <string name="login_message">In order to continue please log in.</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="ok">OK</string>
    <string name="dismiss">DISMISS</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="new_marker">New Marker</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="start_activity">Start Activity</string>
    <string name="finish_activity">Finish Activity</string>
    <string name="join_activity">Join Activity</string>
    <string name="activities_empty_state">No activities yet</string>
    <string name="your_activities">Your Activities</string>
    <string name="new_activity">New Activity</string>
    <string name="activity_name_format">%1$s\'s Activity</string>
    <string name="name">Name</string>
    <string name="code">Code</string>
    <string name="join">Join</string>
    <string name="event_start_note">Waiting for leader to start activity.</string>
    <string name="elapsed_time">Elapsed Time</string>
    <string name="distance">Distance</string>
    <string name="quit_activity">Quit Activity</string>
    <string name="speed">Speed</string>
    <string name="direction">Direction</string>
    <string name="share_joincode">Share the join code:</string>
    <string name="event_chat">Event Chat</string>
    <string name="resume_activity">Resume Activity</string>
    <string name="help">HELP</string>
    <string name="help_confirm">Are you sure you need assistance?</string>
    <string name="yes">Yes</string>
    <string name="remove_help_status">Remove Help Status</string>
    <string name="ask_for_help">Ask For Help</string>
    <string name="help_dismiss_confirm">Are you sure you want to remove help status?</string>
    <string name="dismiss_lower">Dismiss</string>
    <string name="message_hint">Type a message</string>
    <string name="activity_finished_current">You have finished your activity.</string>
    <string name="activity_finished">The activity has ended.</string>
    <string name="export_route_to_kml">Export Route to KML</string>
    <string name="export_markers_to_kml">Export Markers to KML</string>
    <string name="participants">Participants:</string>
    <string name="average_speed">Average Speed:</string>
    <string name="distance_traveled">Distance Traveled:</string>
    <string name="distance_to_you">Distance To You:</string>
    <string name="speed_colon">Speed:</string>
    <string name="direction_colon">Direction:</string>
    <string name="hyphen_sign">-</string>
    <string name="storage_permission_required">Storage permission required.</string>
    <string name="file_saved">File saved in Documents directory.</string>
    <string name="export_error">Error while exporting to a file.</string>
    <string name="marker_load_error">Error loading markers.</string>
    <string name="location_permission_required">Location permission required.</string>
    <string name="location_not_found">Location not found.</string>
    <string name="add_marker_tooltip">Long press on the map to add a marker.</string>
    <string name="marker_updated">Marker updated.</string>
    <string name="marker_deleted">Marker deleted.</string>
    <string name="unknown_error">Unknown error.</string>
    <string name="email_taken">Email taken.</string>
    <string name="username_taken">Username taken.</string>
    <string name="passwords_dont_match">Passwords do not match.</string>
    <string name="password_minimum_length">Minimum length: 8\nInclude both letters and numbers.</string>
    <string name="use_valid_email">Please enter a valid email address.</string>
    <string name="username_minimum_length">Minimum length: 3</string>
    <string name="invalid_join_code">Invalid join code.</string>
    <string name="please_enter_password">Please enter a password.</string>
    <string name="please_enter_email">Please enter an email address.</string>
    <string name="session_expired">Session expired.</string>
    <string name="wrong_email_password">Wrong email or password.</string>
    <string name="registration_successful">Registration successful.</string>
    <string name="apply">Apply</string>
    <string name="select_map_type">Select the map type:</string>
    <string name="standard">Standard</string>
    <string name="satellite">Satellite</string>
    <string name="hybrid">Hybrid</string>
    <string name="last_update">Last update:</string>
    <string name="default_map_type">Set default map type</string>
    <string name="save">Save</string>
    <string name="broadcast">Broadcast</string>
    <string name="save_and_broadcast"><![CDATA[Save & Broadcast]]></string>
</resources>